--- a/angular.json
+++ b/angular.json
@@ -20,7 +20,7 @@
             "tsConfig": "src/tsconfig.app.json",
             "assets": [
               "src/favicon.ico",
-              "src/PracticaUdemy/assets"
+              "src/assets"
             ],
             "styles": [
               "src/styles.css"
