--- a/angular.json
+++ b/angular.json
@@ -19,8 +19,7 @@
             "polyfills": "src/polyfills.ts",
             "tsConfig": "src/tsconfig.app.json",
             "assets": [
-              "src/favicon.ico",
-              "src/libro1.jpg"
+              "src/favicon.ico"
             ],
             "styles": [
               "src/styles.css"
